--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ composeBom = "2023.08.00"
 loggingInterceptor = "4.12.0"
 mapsMobile = "4.8.1-full"
 appcompat = "1.7.0"
+materialIconsExtendedAndroid = "1.7.5"
 okhttp = "4.12.0"
 retrofit = "2.11.0"
 workRuntimeKtx = "2.9.1"
@@ -23,6 +24,7 @@ runtimeLivedata = "1.7.5"
 [libraries]
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityCompose" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-material-icons-extended-android = { module = "androidx.compose.material:material-icons-extended-android", version.ref = "materialIconsExtendedAndroid" }
 androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "workRuntimeKtx" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
