--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,7 @@
 [versions]
 agp = "8.7.3"
+firebaseBom = "33.6.0"
+firebase = "latest.release"
 gson = "2.11.0"
 core = "1.6.1"
 hamcrest = "1.3"
@@ -20,6 +22,7 @@ mockitoKotlin = "5.4.0"
 mockwebserver = "4.12.0"
 navigation = "2.8.3"
 okhttp = "4.12.0"
+playServices = "latest.release"
 retrofit = "2.11.0"
 robolectric = "4.13"
 uiTest = "1.7.5"
@@ -36,6 +39,10 @@ androidx-navigation-compose = { module = "androidx.navigation:navigation-compose
 androidx-rules = { module = "androidx.test:rules", version.ref = "core" }
 androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "work" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "gson" }
+firebase-auth = { module = "com.google.firebase:firebase-auth", version.ref="firebase" }
+firebase-analytics = { module = "com.google.firebase:firebase-analytics", version.ref="firebase" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-firestore-ktx = { module = "com.google.firebase:firebase-firestore-ktx", version.ref = "firebase" }
 hamcrest-all = { module = "org.hamcrest:hamcrest-all", version.ref = "hamcrest" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -64,6 +71,7 @@ mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
 mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "mockwebserver" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+play-services = { module = "com.google.android.gms:play-services", version.ref = "playServices" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 androidx-navigation-runtime-ktx = { group = "androidx.navigation", name = "navigation-runtime-ktx", version.ref = "navigation" }
 androidx-work-testing = { group = "androidx.work", name = "work-testing", version.ref = "work" }
